@@ -1,16 +1,14 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST rails-3.4.zip 60873 RMD160 66aad044f2b8db4758e1c4774f677e1cc81d0d49 SHA1 7e57617ad7e5c75e5a98a24334ec057e08dedb83 SHA256 8d0824c567ecea8e2f28ea0786c6e2998ec336f3aa126b8a10c3fb21eab492e9
 DIST rails-4.0.zip 61451 RMD160 ec146b797f438a96316bb49dc5a97f178d214ae7 SHA1 d1605e75dfde01ac25cfc7e77fa77e49d217a23a SHA256 f8e005d37613d3e06e8f9a6d90fb8e7bdea6dd22c9a46a1ec9e1e1cba2a63167
-EBUILD rails-3.4.ebuild 505 RMD160 d6ef0fe9d7ca9b58ee0e2c17587d934a4f223002 SHA1 98d98a5092d3e5f93ddcdda748fd6e688b2e523a SHA256 91972bfe4ac36a196f531f08238b2b69a40ca25d871b11c3818667dd53fb328b
-EBUILD rails-4.0.ebuild 506 RMD160 a87ee9502e9523c038a5e4c5a1cbbb4e2b445fb0 SHA1 06881b09735fd41f6a3684d67703d80a668c64f1 SHA256 bef034d767eff7580e22c56ca913357b2539b3687e4834894f4393141cd9ff55
-MISC ChangeLog 691 RMD160 318cd033bc2a7c1c84bccbdb90edd0bd8c7c4f77 SHA1 c2783742a4da877fd0f8e9de6bfb249c7015c259 SHA256 a894146dbf0d17233ff86e7a4b56d733b8f9ec8551f4a80f72265a9a58dd4fa4
+EBUILD rails-4.0.ebuild 505 RMD160 337de9c3b342119b18732a38449ee0d26cfe9374 SHA1 24648e870e19b0be1b4a1e04212d85b90799c33f SHA256 02f9fbe84dca65a26522316ba7aae78ee15ea98a78d44d45777a64a33bc22a14
+MISC ChangeLog 816 RMD160 11861cea62e5ca63c2abe59f4bdba94a2dcd28bf SHA1 095f99045206591e03a0e08f3b591b247855ea68 SHA256 2a4a6eeba83f2a3b505756dabea2f930fb726d22cf15923b1d8fc0545887fb63
 MISC metadata.xml 802 RMD160 020aa6d224c34ac27b7a03a42b945108c36f4beb SHA1 2fddfeeffa12f12e825f8753de136e1f0cda3fbd SHA256 e30904590b69263bac8e1fdcc6a5926e69b6a97b4e680eb6a7b56dd8db9d7539
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkr7insACgkQzJrj3cAXR0mCIQCfZ8rWrBiNyJsGb27gbe53d75q
-AVIAoICHb7eBZ9xsfsGhVXXwN49IHcOJ
-=EP2S
+iEYEARECAAYFAkr7jcwACgkQzJrj3cAXR0lBjQCgovmUoYIGuo+rc+h9D2baO9O1
+jPwAoKXveYzfwLpLBHJc0E25jk92k+Co
+=8YaO
 -----END PGP SIGNATURE-----
