@@ -6,7 +6,7 @@ http://www.vim.org/scripts/download_script.php?src_id=11481 -> rails-4.0.zip
 http://www.vim.org/scripts/script.php?script_id=1567
 vim
 vim plugin: RoR - easy file navigation, enhanced syntax highlighting
-amd64 ~x86
+amd64 x86
 vim-doc vim-plugin
 
 
