@@ -1,4 +1,3 @@
-REM 2009-11-12 +1 MSG Stabilise x86 app-vim/rails-4.0 %a
 REM 2009-11-12 +1 MSG Stabilise x86 dev-python/html-1.6 %a
 REM 2009-11-12 +1 MSG Stabilise x86 dev-python/interlude-1.0 %a
 REM 2009-11-12 +1 MSG Stabilise x86 dev-python/nose-pathmunge-0.1.2 %a
